--- a/src/app/property/property-card/property-card.component.html
+++ b/src/app/property/property-card/property-card.component.html
@@ -1,1 +1,7 @@
-<h1>I'm a card...</h1>
+<div class="row">
+  <div class="card">
+    <img src="assets/img/house-clipart.jpg">
+    <h1>{{Property.Type}}</h1>
+    <h2>{{Property.Price}}</h2>
+</div>
+</div>
