--- a/src/app/property/property-card/property-card.component.html
+++ b/src/app/property/property-card/property-card.component.html
@@ -1,7 +1,20 @@
-<div class="row">
-  <div class="card">
-    <img src="assets/img/house-clipart.jpg">
-    <h1>{{Property.Type}}</h1>
-    <h2>{{Property.Price}}</h2>
-</div>
+<div class="card">
+  <div class="card-img-wrapper">
+    <img *ngIf="property.Image" class="card-img-top" src="assets/img/{{property.Image}}.jpg">
+    <img *ngIf="!property.Image" class="card-img-top" src="assets/img/house-clipart.jpg">
+    <ul class="list-inline text-center member-icons">
+      <li class="list-inline-item">
+        <button class="btn btn-primary" routerLink="/property-detail/{{property.Id}}"><i
+            class="fas fa-pencil-alt"></i></button>
+      </li>
+      <li class="list-inline-item">
+        <button class="btn btn-primary"><i class="fas fa-id-badge"></i></button>
+      </li>
+    </ul>
+  </div>
+  <div class="card-body p-2">
+    <h3>{{property.Name}}</h3>
+    <h4>{{property.Type}}</h4>
+    <h5>{{property.Price}}</h5>
+  </div>
 </div>
