--- a/src/app/property/property-list/property-list.component.html
+++ b/src/app/property/property-list/property-list.component.html
@@ -1,1 +1,5 @@
-<p>property-list works!</p>
+<div class="row">
+  <div *ngFor="let prop of properties_array" class="shadow-lg col-sm-6 p-2">
+    <app-property-card [property]="prop"></app-property-card>
+  </div>
+</div>
