--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand">Navbar</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
     aria-expanded="false" aria-label="Toggle navigation">
@@ -16,5 +16,39 @@
         <a class="nav-link" routerLinkActive="active" routerLink="/add-property">List Property</a>
       </li>
     </ul>
+
+    <div>
+      <ul class="nav navbar-nav">
+        <li *ngIf="!loggedin()" class="nav-item">
+          <a class="nav-link" routerLinkActive="active" routerLink="user/register">Register</a>
+        </li>
+        <li *ngIf="!loggedin()" class="nav-item">
+          <a class="nav-link" routerLinkActive="active" routerLink="user/login">Login</a>
+        </li>
+        <!-- <li *ngIf="loggedin()" class="nav-item">
+          <a class="nav-link" (click)="onLogout()">Logout</a>
+        </li> -->
+        <div *ngIf='loggedin()' class="dropdown mr-5" dropdown>
+          <a href="#" class="dropdown-toggle text-light" dropdownToggle (click)='false'>
+            Welcome {{ loggedinUser }}
+          </a>
+          <div class="dropdown-menu" *dropdownMenu>
+            <a href="#" class="dropdown-item">
+              <i class='fas fa-tachometer-alt'>View dashboard</i>
+            </a>
+            <a href="#" class="dropdown-item">
+              <i class="far fa-user-circle">My Profile</i>
+            </a>
+            <a href="#" class="dropdown-item">
+              <i class="fas fa-key">Change Password</i>
+            </a>
+            <a class="dropdown-item" (click)='onLogout()'>
+              <i class="fas fa-sign-out-alt">Logout</i>
+            </a>
+          </div>
+        </div>
+      </ul>
+    </div>
+
   </div>
 </nav>
